# WhaleChan

./: .gitignore  .travis.yml  README.md  WhaleChan.cabal  config-example.dhall  package.yaml  stack.yaml
exe/: WhaleChan.hs
src/: Main.hs
src/Javran/WhaleChan/: Base.hs  Dhall.hs  Env.hs  ExtInfoThread.hs  FromSource.hs  HealthThread.hs  Log.hs  Main.hs  NextMaintenance.hs  ProfileDiffThread.hs  ReminderSupply.hs  ReminderThread.hs  ReoccuringEvents.hs  ServerStatThread.hs  TelegramThread.hs  TimerThread.hs  TweetSyncThread.hs  Twitter.hs  TwitterThread.hs  Types.hs  Util.hs
src/Javran/WhaleChan/FromSource/: Kc3Kai.hs  KcsConst.hs  Kcwiki.hs  TimeFormat.hs  Util.hs  Wikia.hs
src/Javran/WhaleChan/ReminderThread/: EventReminder.hs  EventReminderNew.hs  Message.hs  ReminderSupply.hs  ReoccuringEvents.hs  Types.hs
src/Javran/WhaleChan/ServerStatThread/: Base.hs  Types.hs
test/Javran/WhaleChan/: ReminderSupplySpec.hs  ReoccuringEventsSpec.hs  UtilSpec.hs
test/Javran/WhaleChan/FromSource/: Kc3KaiSpec.hs  KcsConstSpec.hs  KcwikiSpec.hs  WikiaSpec.hs
test/Javran/WhaleChan/ReminderThread/: EventReminderSpec.hs  ReminderSupplySpec.hs  ReoccuringEventsSpec.hs
test/Javran/WhaleChan/ServerStatThread/: BaseSpec.hs
