name:                WhaleChan
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/Javran/WhaleChan#readme
license:             BSD3
license-file:        LICENSE
author:              Javran Cheng
maintainer:          javran.c@gmail.com
copyright:           Copyright: (c) 2016 Javran Cheng
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable WhaleChan
  hs-source-dirs:      src
  main-is:             Javran/WhaleChan/Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Javran.WhaleChan.Main
  other-modules:       Javran.WhaleChan.Types
                     , Javran.WhaleChan.Base
  build-depends:       base
                     , text
                     , bytestring
                     , twitter-conduit
                     , telegram-api
                     , authenticate-oauth
                     , mtl
                     , servant-client
                     , http-client
                     , http-client-tls
                     , data-default
                     , containers
                     , aeson
                     , yaml
                     , async
                     , time
                     , timezone-olson
                     , timezone-series
  default-language:    Haskell2010

test-suite test
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  ghc-options:         -Wall
  build-depends:       base
                     , hspec

source-repository head
  type:     git
  location: https://github.com/Javran/WhaleChan
