cabal-version:       1.12
name:                WhaleChan
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/Javran/WhaleChan#readme
license:             BSD3
license-file:        LICENSE
author:              Javran Cheng
maintainer:          javran.c@gmail.com
copyright:           Copyright: (c) 2016 Javran Cheng
category:            Web
build-type:          Simple

source-repository head
  type:     git
  location: https://github.com/Javran/WhaleChan

library
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  exposed-modules:     Javran.WhaleChan.Types
                     , Javran.WhaleChan.Base
                     , Javran.WhaleChan.ReoccuringEvents
                     , Javran.WhaleChan.Main
  build-depends:       base
                     , text
                     , bytestring
                     , twitter-conduit
                     , telegram-api
                     , authenticate-oauth
                     , mtl
                     , servant-client
                     , http-client
                     , http-client-tls
                     , data-default
                     , containers
                     , aeson
                     , yaml
                     , async
                     , time
                     , timezone-olson
                     , timezone-series
  default-language:    Haskell2010

executable WhaleChan
  hs-source-dirs:      src
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  main-is:             Main.hs
  other-modules:       Javran.WhaleChan.Base
                     , Javran.WhaleChan.Main
                     , Javran.WhaleChan.ReoccuringEvents
                     , Javran.WhaleChan.Types

  build-depends:       base
                     , text
                     , bytestring
                     , twitter-conduit
                     , telegram-api
                     , authenticate-oauth
                     , mtl
                     , servant-client
                     , http-client
                     , http-client-tls
                     , data-default
                     , containers
                     , aeson
                     , yaml
                     , async
                     , time
                     , timezone-olson
                     , timezone-series
                     , WhaleChan
  default-language:    Haskell2010

test-suite test
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  ghc-options:         -Wall
  build-depends:       base
                     , WhaleChan
                     , hspec
                     , time
  other-modules:       Javran.WhaleChan.ReoccuringEventsSpec
  default-language:    Haskell2010